Villanova_Dev1/src/objects/SFDC_Event_Vendor_Partner__c.object
<CustomObject>
    <description>This object allows you to track Partners on a specific Special Event.</description>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <referenceTo>SFDC_Vendor_Partner__c</referenceTo>
        <relationshipName>R00N60000001HpziEAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFDC_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Special_Event__c</fullName>
        <label>Special Event</label>
        <referenceTo>SFDC_Special_Event__c</referenceTo>
        <relationshipName>R00N60000001HpzaEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShowCasing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowCasing?</label>
        <type>Checkbox</type>
    </fields>
    <label>Event Vendor/Partner</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Event Vendor/Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Vendors/Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>